objects/Policy_Reference__c/Policy_Reference__c.object-meta.xml
<CustomObject>
    <label>Policy Reference</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy References</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>