objects/Policy_Reference__c/fields/Basic_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Basic_Plan_Name__c</fullName>
    <label>Basic Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>