objects/Policy_Reference__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Policy References</relationshipLabel>
    <relationshipName>Policy_References</relationshipName>
    <type>Lookup</type>
</CustomField>