objects/Policy_Reference__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Payment</fullName>
            </value>
            <value>
                <fullName>Internet Banking</fullName>
            </value>
            <value>
                <fullName>Bank Draft</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Bill of Exchange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>