objects/Policy_Reference__c/fields/Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number__c</fullName>
    <externalId>true</externalId>
    <label>Policy Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>