objects/Policy_Reference__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Life Insurance</fullName>
            </value>
            <value>
                <fullName>Interest Sensitive Whole Life</fullName>
            </value>
            <value>
                <fullName>Permanent Insurance</fullName>
            </value>
            <value>
                <fullName>Term Insurance</fullName>
            </value>
            <value>
                <fullName>Traditional Whole Life</fullName>
            </value>
            <value>
                <fullName>Variable Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>